navimesh안보이던거 수정 sslr 오류 수정 [fMaxDist가 1로 고정이었음..] test scene으로 설정 중

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 ################################################################################
 
 /ImpossibleBoss.VC.db
+/ImpossibleBoss.VC.VC.opendb
+/IMBO_MAINFRAME/x64/Debug/IMBO_MAINFRAME.tlog
+/IMBO_MAINFRAME/x64/Debug
+/.vs/ImpossibleBoss/v14
+/ipch/IMBO_MAINFRAME-b18e17a9
+/x64/Debug
